write swagger for notif route
