# domain/notification/response/get_notification_response.go
@@ -2,6 +2,12 @@ package response
 
 import notifpb "sut-gateway-go/pb/notification"
 
+// swagger:response GetNotificationResponse
+type SwaggerGetNotificationResponse struct {
+	// in: body
+	Body GetNotificationResponse
+}
+
 type GetNotificationResponse struct {
 	Accepted int64 `json:"accepted"`
 	Rejected int64 `json:"rejected"`
